<resources>
    <string name="app_name">EC-Geo Owner</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="owner">Owner</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="update">Update</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="shop_s_name">Shop\'s name</string>
    <string name="city_town">City/Town</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="mobile">Mobile</string>
    <string name="new_here_add_your_shop_s_details_and_get_started">New Here? Add your shop\'s details and get started!</string>
    <string name="you_will_receive_otp_on_this_mobile_number">You will receive OTP on this mobile number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_6_digit_otp_send_to_your_mobile">Enter the 6 digit otp send to your mobile</string>
    <string name="verify">Verify</string>
    <string name="submit">Submit</string>
    <string name="_0">0</string>
    <string name="todo">TODO</string>
    <string name="product_name">Product name</string>
    <string name="Rs">\u20B9</string>
    <string name="quantity">Quantity</string>
    <string name="discount">Discount</string>
    <string name="order_id">Order id</string>
    <string name="customer">Customer</string>
    <string name="cancel">Cancel</string>
    <string name="delievered">Delievered</string>
    <string name="cancel_order">Cancel Order</string>
</resources>