<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:layout_marginTop="2dp"
    android:padding="8dp"
    app:cardBackgroundColor="@color/lightRed"
    app:cardCornerRadius="@dimen/prompt_vertical"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/orderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calistoga"
            android:textSize="20sp"
            tools:text="@string/order_id" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abhaya_libre_medium"
                android:textSize="18sp"
                tools:text="@string/customer" />

            <TextView
                android:id="@+id/total_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/abhaya_libre_medium"
                android:textAlignment="viewEnd"
                android:textColor="@color/red"
                android:textSize="18sp"
                tools:text="@string/_0" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>