<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpVerification">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo"
            android:src="@drawable/otp"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/calistoga"
            android:text="@string/otp_verification"
            android:textColor="@color/purple_500"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/enter_the_6_digit_otp_send_to_your_mobile"
            android:textColor="@color/purple_700"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="5sp"
                android:background="@drawable/otpbox"
                android:hint="@string/_0"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:padding="10sp"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/input2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="5sp"
                android:background="@drawable/otpbox"
                android:hint="@string/_0"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:padding="10sp"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/input3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="5sp"
                android:background="@drawable/otpbox"
                android:hint="@string/_0"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:padding="10sp"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/input4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="5sp"
                android:background="@drawable/otpbox"
                android:hint="@string/_0"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:padding="10sp"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/input5"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="5sp"
                android:background="@drawable/otpbox"
                android:hint="@string/_0"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:padding="10sp"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/input6"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="5sp"
                android:background="@drawable/otpbox"
                android:hint="@string/_0"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:padding="10sp"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <Button
            android:id="@+id/verifyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="14sp"
            android:text="@string/verify" />

    </LinearLayout>


</ScrollView>